fix: scrollbar fixed

--- a/desktop-app/src/renderer/src/index.css
+++ b/desktop-app/src/renderer/src/index.css
@@ -24,7 +24,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
   height: 8px;
 }
 ::-webkit-scrollbar-track {
